--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </div>
         <button id="finish-button">Finish</button>
     </div>
+    <a href="https://ronaa2.github.io/Logiciel/" download>
+        Télécharger l'installeur
+      </a>
+      
     <script src="preload.js"></script>
 </body>
 </html>
